--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://192.168.0.244:9000/</sonar.host.url>
+		<sonar.host.url>http://172.31.17.31:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
-		<sonar.password>admin</sonar.password>
+		<sonar.password>admin123</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -97,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>FEWA IT CONSULTING Releases Nexus Repository</name>
-	      <url>http://52.55.250.48:8081/repository/fewa_web_app/</url>
+	      <url>http://3.91.151.42:8081/repository/newRelease/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>FEWA IT CONSULTING Snapshot Nexus Repository </name>
-	      <url>http://52.55.250.48:8081/repository/fewa_web_app_snapshot/</url>
+	      <url>http://3.91.151.42:8081/repository/newSnapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
